xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__axis_wildcard_prefix.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::*:foo\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                LocalName(
                                    "foo",
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            12,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            12,
        ),
    },
)
