xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__axis_wildcard_q_name.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::Q{http://example.com}*\")"
---
Path(
    PathExpr {
        steps: [
            AxisStep(
                AxisStep {
                    axis: Child,
                    node_test: NameTest(
                        Namespace(
                            "http://example.com",
                        ),
                    ),
                    predicates: [],
                },
            ),
        ],
    },
)
