xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__axis_with_predicate.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::foo[1]\")"
---
(
    Path(
        PathExpr {
            steps: [
                AxisStep(
                    AxisStep {
                        axis: Child,
                        node_test: NameTest(
                            Name(
                                Name {
                                    name: "foo",
                                    namespace: None,
                                },
                            ),
                        ),
                        predicates: [
                            [
                                (
                                    Path(
                                        PathExpr {
                                            steps: [
                                                PrimaryExpr(
                                                    Literal(
                                                        Integer(
                                                            1,
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        },
                                    ),
                                    11..12,
                                ),
                            ],
                        ],
                    },
                ),
            ],
        },
    ),
    0..13,
)
