xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__comparison_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1 < 2\")"
---
(
    Binary(
        BinaryExpr {
            operator: GenLt,
            left: PathExpr {
                steps: [
                    PrimaryExpr(
                        (
                            Literal(
                                Integer(
                                    1,
                                ),
                            ),
                            0..1,
                        ),
                    ),
                ],
            },
            right: PathExpr {
                steps: [
                    PrimaryExpr(
                        (
                            Literal(
                                Integer(
                                    2,
                                ),
                            ),
                            4..5,
                        ),
                    ),
                ],
            },
        },
    ),
    0..5,
)
