xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__complex_comma.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_xpath_no_default_ns(\"(1, 2), (3, 4)\")"
---
Ok(
    XPath {
        exprs: [
            (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Expr(
                                            [
                                                (
                                                    Path(
                                                        PathExpr {
                                                            steps: [
                                                                (
                                                                    PrimaryExpr(
                                                                        (
                                                                            Expr(
                                                                                [
                                                                                    (
                                                                                        Path(
                                                                                            PathExpr {
                                                                                                steps: [
                                                                                                    (
                                                                                                        PrimaryExpr(
                                                                                                            (
                                                                                                                Literal(
                                                                                                                    Integer(
                                                                                                                        1,
                                                                                                                    ),
                                                                                                                ),
                                                                                                                1..2,
                                                                                                            ),
                                                                                                        ),
                                                                                                        1..2,
                                                                                                    ),
                                                                                                ],
                                                                                            },
                                                                                        ),
                                                                                        1..2,
                                                                                    ),
                                                                                    (
                                                                                        Path(
                                                                                            PathExpr {
                                                                                                steps: [
                                                                                                    (
                                                                                                        PrimaryExpr(
                                                                                                            (
                                                                                                                Literal(
                                                                                                                    Integer(
                                                                                                                        2,
                                                                                                                    ),
                                                                                                                ),
                                                                                                                4..5,
                                                                                                            ),
                                                                                                        ),
                                                                                                        4..5,
                                                                                                    ),
                                                                                                ],
                                                                                            },
                                                                                        ),
                                                                                        4..5,
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                            1..5,
                                                                        ),
                                                                    ),
                                                                    1..5,
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                    1..5,
                                                ),
                                            ],
                                        ),
                                        0..6,
                                    ),
                                ),
                                0..6,
                            ),
                        ],
                    },
                ),
                0..6,
            ),
            (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Expr(
                                            [
                                                (
                                                    Path(
                                                        PathExpr {
                                                            steps: [
                                                                (
                                                                    PrimaryExpr(
                                                                        (
                                                                            Expr(
                                                                                [
                                                                                    (
                                                                                        Path(
                                                                                            PathExpr {
                                                                                                steps: [
                                                                                                    (
                                                                                                        PrimaryExpr(
                                                                                                            (
                                                                                                                Literal(
                                                                                                                    Integer(
                                                                                                                        3,
                                                                                                                    ),
                                                                                                                ),
                                                                                                                9..10,
                                                                                                            ),
                                                                                                        ),
                                                                                                        9..10,
                                                                                                    ),
                                                                                                ],
                                                                                            },
                                                                                        ),
                                                                                        9..10,
                                                                                    ),
                                                                                    (
                                                                                        Path(
                                                                                            PathExpr {
                                                                                                steps: [
                                                                                                    (
                                                                                                        PrimaryExpr(
                                                                                                            (
                                                                                                                Literal(
                                                                                                                    Integer(
                                                                                                                        4,
                                                                                                                    ),
                                                                                                                ),
                                                                                                                12..13,
                                                                                                            ),
                                                                                                        ),
                                                                                                        12..13,
                                                                                                    ),
                                                                                                ],
                                                                                            },
                                                                                        ),
                                                                                        12..13,
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                            9..13,
                                                                        ),
                                                                    ),
                                                                    9..13,
                                                                ),
                                                            ],
                                                        },
                                                    ),
                                                    9..13,
                                                ),
                                            ],
                                        ),
                                        8..14,
                                    ),
                                ),
                                8..14,
                            ),
                        ],
                    },
                ),
                8..14,
            ),
        ],
    },
)
