xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__concat_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"'a' || 'b'\")"
---
(
    Binary(
        BinaryExpr {
            operator: Concat,
            left: PathExpr {
                steps: [
                    PrimaryExpr(
                        Literal(
                            String(
                                "a",
                            ),
                        ),
                    ),
                ],
            },
            right: PathExpr {
                steps: [
                    PrimaryExpr(
                        Literal(
                            String(
                                "b",
                            ),
                        ),
                    ),
                ],
            },
        },
    ),
    0..10,
)
