xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__decimal_literal.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_literal(\"1.5\")"
---
Decimal(
    1.5,
)
