xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__decimal_literal_no_after.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_literal(\"1.\")"
---
Decimal(
    DecimalLiteral {
        value: 1,
        fraction_digits: 0,
    },
)
