xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__decimal_literal_no_before.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_literal(\".5\")"
---
Decimal(
    DecimalLiteral {
        value: 5,
        fraction_digits: 1,
    },
)
