xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__double_slash_middle.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::foo//child::bar\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    0..10,
                ),
                (
                    AxisStep(
                        AxisStep {
                            axis: DescendantOrSelf,
                            node_test: KindTest(
                                Any,
                            ),
                            predicates: [],
                        },
                    ),
                    10..12,
                ),
                (
                    AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "bar",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    12..22,
                ),
            ],
        },
    ),
    0..22,
)
