xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__dynamic_function_call.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"$foo()\")"
---
Spanned {
    value: Path(
        PathExpr {
            steps: [
                Spanned {
                    value: PostfixExpr {
                        primary: Spanned {
                            value: VarRef(
                                Name {
                                    name: "foo",
                                    namespace: None,
                                },
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    0,
                                ),
                                length: SourceOffset(
                                    4,
                                ),
                            },
                        },
                        postfixes: [
                            ArgumentList(
                                [],
                            ),
                        ],
                    },
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            6,
                        ),
                    },
                },
            ],
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            6,
        ),
    },
}
